Fixed s5-s0 title font-size on mobile

--- a/src/sass/sections/_5.scss
+++ b/src/sass/sections/_5.scss
@@ -10,6 +10,10 @@
 
     .title {
       margin-bottom: 0px;
+
+      @media screen and (max-width: 600px) {
+        font-size: 30px;
+      }
     }
 
     .underTitle {
